--- a/app/src/main/res/layout/movie_card.xml
+++ b/app/src/main/res/layout/movie_card.xml
@@ -25,7 +25,7 @@
                 android:layout_height="@dimen/movie_cover_height"
                 android:id="@+id/thumbnail"
                 android:background="?attr/selectableItemBackgroundBorderless"
-                android:scaleType="fitXY">
+                android:scaleType="fitXY"/>
 
             <TextView
                 android:id="@+id/title"
@@ -36,7 +36,7 @@
                 android:paddingRight="@dimen/movie_title_padding"
                 android:paddingTop="@dimen/movie_title_padding"
                 android:textColor="@color/movie_title"
-                android:textSize="@dimen/movie_title">
+                android:textSize="@dimen/movie_title"/>
 
             <TextView
                 android:id="@+id/userrating"
@@ -47,7 +47,7 @@
                 android:paddingRight="@dimen/movie_title_padding"
                 android:paddingBottom="@dimen/user_rating_padding_bottom"
                 android:textColor="@color/colorAccent"
-                android:textSize="@dimen/user_rating">
+                android:textSize="@dimen/user_rating"/>
 
 
         </RelativeLayout>
