--- a/app/src/main/res/layout/content_detail.xml
+++ b/app/src/main/res/layout/content_detail.xml
@@ -5,6 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
     android:background="@color/viewBg"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".DetailActivity"
@@ -15,84 +16,65 @@
         android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/movietitle"
-                android:layout_marginTop="@dimen/layout_margin_top"
-                android:layout_marginLeft="@dimen/layout_margin_left"
-                android:text="@string/name_movie"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:textSize="25sp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:id="@+id/title"
-                android:layout_marginTop="@dimen/layout_margin_top"
-                android:layout_marginLeft="@dimen/layout_margin_left"
-                android:padding="@dimen/padding_layout"
-                android:textSize="20sp"/>
-
-            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/plot"
-                android:layout_marginTop="@dimen/layout_margin_top"
-                android:layout_marginLeft="@dimen/layout_margin_left"
-                android:textAlignment="center"
+                android:textSize="34sp"
+                android:fontFamily="sans-serif"
                 android:textStyle="bold"
-                android:textSize="25sp"
-                android:layout_below="@+id/title"/>
+                android:textColor="#0a1c24"/>
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/rating"
-                android:layout_marginTop="@dimen/layout_margin_top2"
-                android:layout_marginLeft="@dimen/layout_margin_left"
-                android:text="@string/rating"
-                android:textAlignment="center"
+                android:textSize="16sp"
+                android:fontFamily="sans-serif"
                 android:textStyle="bold"
-                android:textSize="25sp"
-                android:layout_below="@+id/plotsynopsis" />
+                android:textColor="#0a1c24"
+                tools:text="User Score" />
 
             <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/userrating"
-                android:layout_marginTop="@dimen/layout_margin_top"
-                android:layout_marginLeft="@dimen/layout_margin_left"
-                android:padding="@dimen/padding_layout"
-                android:textSize="20sp"
-                android:layout_below="@+id/rating" />
+                android:textSize="14sp"
+                android:fontFamily="sans-serif"
+                android:textStyle="normal"
+                android:textColor="#0a1c24"
+                android:id="@+id/userrating"/>
 
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/overviewTitle"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/release"
-                android:layout_marginTop="@dimen/layout_margin_top2"
-                android:layout_marginLeft="@dimen/layout_margin_left"
-                android:text="@string/release"
-                android:textAlignment="center"
+                android:textSize="16sp"
+                android:fontFamily="sans-serif"
                 android:textStyle="bold"
-                android:textSize="25sp"
-                android:layout_below="@+id/userrating" />
+                android:textColor="#0a1c24"
+                tools:text="Overview" />
 
             <TextView
+                android:id="@+id/movieoverview"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/releasedate"
-                android:layout_marginTop="@dimen/layout_margin_top"
-                android:layout_marginLeft="@dimen/layout_margin_left"
-                android:padding="@dimen/padding_layout"
-                android:textSize="20sp"
-                android:layout_below="@+id/release" />
+                android:textSize="14sp"
+                android:fontFamily="sans-serif"
+                android:textStyle="normal"
+                android:textColor="#0a1c24"
+                android:maxLines="3"/>
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:fontFamily="sans-serif"
+                android:textStyle="bold"
+                android:textColor="#0a1c24"
+                android:letterSpacing="-0.02"
+                tools:text="Top Billed Cast" />
 
         </LinearLayout>
     </ScrollView>
