--- a/app/src/main/res/layout/movie_card.xml
+++ b/app/src/main/res/layout/movie_card.xml
@@ -4,7 +4,7 @@
     xmlns:card_view="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:adjustViewBounds="true">
 
     <androidx.cardview.widget.CardView
@@ -22,33 +22,59 @@
 
             <ImageView
                 android:id="@+id/thumbnail"
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/movie_cover_height"
+                android:layout_width="150dp"
+                android:layout_height="168dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:scaleType="fitXY" />
 
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="match_parent"
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/thumbnail"
-                android:paddingLeft="@dimen/movie_title_padding"
-                android:paddingTop="@dimen/movie_title_padding"
-                android:paddingRight="@dimen/movie_title_padding"
-                android:textColor="@color/movie_title"
-                android:textSize="@dimen/movie_title" />
+                android:layout_toRightOf="@id/thumbnail">
 
-            <TextView
-                android:id="@+id/userrating"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/title"
-                android:paddingLeft="@dimen/movie_title_padding"
-                android:paddingRight="@dimen/movie_title_padding"
-                android:paddingBottom="@dimen/user_rating_padding_bottom"
-                android:textColor="@color/colorAccent"
-                android:textSize="@dimen/user_rating" />
+                <LinearLayout
+                    android:id="@+id/titleLayout"
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/thumbnail">
 
+                    <TextView
+                        android:id="@+id/title"
+                        android:layout_width="204dp"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@id/thumbnail"
+                        android:paddingLeft="@dimen/movie_title_padding"
+                        android:paddingTop="@dimen/movie_title_padding"
+                        android:paddingRight="@dimen/movie_title_padding"
+                        android:textColor="@color/movie_title"
+                        android:textSize="@dimen/movie_title" />
+
+                    <TextView
+                        android:id="@+id/userrating"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_toRightOf="@id/title"
+                        android:paddingTop="@dimen/movie_title_padding"
+                        android:paddingRight="@dimen/movie_title_padding"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="@dimen/user_rating" />
+
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/overview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="@dimen/movie_title_padding"
+                    android:paddingTop="@dimen/movie_title_padding"
+                    android:paddingRight="@dimen/movie_title_padding"
+                    android:textColor="@color/movie_title"
+                    android:textSize="@dimen/movie_title"
+                    android:maxLines="5"/>
+
+            </LinearLayout>
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
