--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#051218</color>
+    <color name="colorPrimaryDark">#2cd77d</color>
     <color name="colorAccent">#D81B60</color>
     <color name="viewBg">#F1F5f8</color>
     <color name="movie_title">#4C4C4C</color>
