--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#051218</color>
-    <color name="colorPrimaryDark">#2cd77d</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimaryDark">#051218</color>
+    <color name="colorAccent">#2cd77d</color>
+    <color name="navItemDisabled">#1A814B</color>
+    <color name="grey">#E8E8E8</color>
     <color name="viewBg">#F1F5f8</color>
     <color name="movie_title">#4C4C4C</color>
     <color name="white">#FFF</color>
