--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,7 +2,8 @@
 <resources>
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="movie_title_padding">10dp</dimen>
+    <dimen name="movie_title_padding">4dp</dimen>
+    <dimen name="movie_overview_padding">8dp</dimen>
     <dimen name="movie_title">15sp</dimen>
     <dimen name="movie_cover_height">160dp</dimen>
     <dimen name="card_movie_radius">0dp</dimen>
@@ -15,4 +16,7 @@
     <dimen name="layout_margin_top2">10dp</dimen>
     <dimen name="padding_layout">16dp</dimen>
     <dimen name="layout_padding_8dp">8dp</dimen>
+    <dimen name="card_top_10dp">10dp</dimen>
+
+    <dimen name="card_content_margin">15dp</dimen>
 </resources>
