add settings fragment people fragment and remove top tabs con movie screen until fix it

--- a/app/src/main/res/layout/fragment_people.xml
+++ b/app/src/main/res/layout/fragment_people.xml
@@ -5,9 +5,6 @@
     android:layout_height="match_parent"
     tools:context=".PeopleFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <include layout="@layout/content_main" />
 
 </FrameLayout>
