--- a/app/src/main/res/layout/cast_card.xml
+++ b/app/src/main/res/layout/cast_card.xml
@@ -1,43 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
+    android:id="@+id/card_view"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:adjustViewBounds="true">
+    android:layout_marginStart="@dimen/layout_padding_8dp"
+    android:layout_marginEnd="@dimen/layout_padding_8dp"
+    android:background="@color/viewBg"
+    card_view:cardCornerRadius="@dimen/card_movie_radius">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/card_view"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        card_view:cardCornerRadius="@dimen/card_movie_radius">
+        android:gravity="center"
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/actorPic"
+            android:layout_width="100dp"
+            android:layout_height="150dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:scaleType="fitXY" />
+
+        <TextView
+            android:id="@+id/actorName"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="center" >
+            android:layout_marginTop="5dp"
+            android:fontFamily="sans-serif"
+            android:text="Tom Holland"
+            android:textColor="#0a1c24"
+            android:textSize="12sp"
+            android:textStyle="normal" />
 
-            <ImageView
-                android:id="@+id/actorPic"
-                android:layout_width="90dp"
-                android:layout_height="150dp"
-                android:background="?attr/selectableItemBackgroundBorderless"
-                android:scaleType="fitXY" />
-
-            <TextView
-                android:id="@+id/actorName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12sp"
-                android:layout_marginTop="5dp"
-                android:fontFamily="sans-serif"
-                android:textStyle="normal"
-                android:textColor="#0a1c24"
-                android:text="Tom Holland" />
-
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
-</LinearLayout>
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
