--- a/app/src/main/res/layout/fragment_people.xml
+++ b/app/src/main/res/layout/fragment_people.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PeopleFragment">
+    android:id="@+id/container"
+    tools:context=".fragments.PeopleFragment">
 
     <include layout="@layout/content_main" />
 
