--- a/app/src/main/res/layout/fragment_people_detail.xml
+++ b/app/src/main/res/layout/fragment_people_detail.xml
@@ -53,21 +53,21 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <include layout="@layout/content_detail"/>
+        <include layout="@layout/people_content_detail"/>
 
     </androidx.core.widget.NestedScrollView>
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="10dp"
-        app:layout_anchor="@id/collapsing_toolbar"
-        app:layout_anchorGravity="bottom">
+<!--    <RelativeLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="10dp"-->
+<!--        app:layout_anchor="@id/collapsing_toolbar"-->
+<!--        app:layout_anchorGravity="bottom">-->
 
 <!--        <View-->
 <!--            android:layout_width="match_parent"-->
 <!--            android:layout_height="5dp"-->
 <!--            android:layout_alignParentBottom="true"-->
 <!--            android:background="@drawable/app_bar_shadow"/>-->
-    </RelativeLayout>
+<!--    </RelativeLayout>-->
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
