--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,4 +20,10 @@
         <item name="colorControlNormal">@color/colorAccent</item>
     </style>
 
+
+    <style name="CustomRatingBar" parent="Theme.AppCompat">
+        <item name="colorControlNormal">#80CBC4</item>
+        <item name="colorControlActivated">#009688</item>
+    </style>
+
 </resources>
