--- a/app/src/main/res/layout/fragment_people_info.xml
+++ b/app/src/main/res/layout/fragment_people_info.xml
@@ -1,112 +1,151 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:paddingHorizontal="16dp"
-    android:paddingTop="32dp"
-    android:background="@color/viewBg"
-    tools:context=".fragments.PeopleInfoFragment">
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:fontFamily="sans-serif"
-        android:textStyle="bold"
-        android:textColor="#091e29"
-        android:text="Known For" />
+        android:theme="@style/AppTheme.AppBarOverlay"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        app:layout_constraintStart_toStartOf="parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:fontFamily="sans-serif"
-        android:textStyle="normal"
-        android:textColor="#091e29"
-        android:text="Acting" />
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:layout_collapseMode="pin"
+            android:layoutDirection="rtl"
+            app:theme="@style/ToolbarTheme">
 
+            <TextView
+                android:id="@+id/fragmentTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp"
+                android:layout_gravity="left"
+                android:fontFamily="sans-serif-medium"
+                android:textStyle="normal"
+                android:textColor="#2cd77d"
+                android:lineSpacingExtra="8sp"
+                android:text="Personal Info" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:layout_marginTop="24dp"
-        android:fontFamily="sans-serif"
-        android:textStyle="bold"
-        android:textColor="#091e29"
-        tools:text="Gender" />
+        </androidx.appcompat.widget.Toolbar>
+    </com.google.android.material.appbar.AppBarLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:fontFamily="sans-serif"
-        android:textStyle="normal"
-        android:textColor="#091e29"
-        android:text="Male" />
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingHorizontal="16dp"
+        android:paddingTop="32dp"
+        android:background="@color/viewBg"
+        tools:context=".fragments.PeopleInfoFragment">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:fontFamily="sans-serif"
+            android:textStyle="bold"
+            android:textColor="#091e29"
+            android:text="Known For" />
 
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:fontFamily="sans-serif"
-        android:textStyle="bold"
-        android:layout_marginTop="24dp"
-        android:textColor="#091e29"
-        android:text="Known Credits" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:fontFamily="sans-serif"
-        android:textStyle="normal"
-        android:textColor="#091e29"
-        android:text="131" />
-
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:fontFamily="sans-serif"
-        android:textStyle="bold"
-        android:layout_marginTop="24dp"
-        android:textColor="#091e29"
-        android:text="Birthday" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:fontFamily="sans-serif"
-        android:textStyle="normal"
-        android:textColor="#091e29"
-        android:text="1964-09-02" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:fontFamily="sans-serif"
+            android:textStyle="normal"
+            android:textColor="#091e29"
+            android:text="Acting" />
 
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:layout_marginTop="24dp"
+            android:fontFamily="sans-serif"
+            android:textStyle="bold"
+            android:textColor="#091e29"
+            android:text="Gender" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:fontFamily="sans-serif"
-        android:layout_marginTop="24dp"
-        android:textStyle="bold"
-        android:textColor="#091e29"
-        android:text="Place of Birth" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:fontFamily="sans-serif"
+            android:textStyle="normal"
+            android:textColor="#091e29"
+            android:text="Male" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="16sp"
-        android:fontFamily="sans-serif"
-        android:textStyle="normal"
-        android:textColor="#091e29"
-        android:text="Beirut, Lebanon" />
 
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:fontFamily="sans-serif"
+            android:textStyle="bold"
+            android:layout_marginTop="24dp"
+            android:textColor="#091e29"
+            android:text="Known Credits" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:fontFamily="sans-serif"
+            android:textStyle="normal"
+            android:textColor="#091e29"
+            android:text="131" />
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:fontFamily="sans-serif"
+            android:textStyle="bold"
+            android:layout_marginTop="24dp"
+            android:textColor="#091e29"
+            android:text="Birthday" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:fontFamily="sans-serif"
+            android:textStyle="normal"
+            android:textColor="#091e29"
+            android:text="1964-09-02" />
+
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:fontFamily="sans-serif"
+            android:layout_marginTop="24dp"
+            android:textStyle="bold"
+            android:textColor="#091e29"
+            android:text="Place of Birth" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:fontFamily="sans-serif"
+            android:textStyle="normal"
+            android:textColor="#091e29"
+            android:text="Beirut, Lebanon" />
+
+    </LinearLayout>
 </LinearLayout>
