--- a/app/src/main/res/layout/movie_content_detail.xml
+++ b/app/src/main/res/layout/movie_content_detail.xml
@@ -11,15 +11,9 @@
     android:orientation="vertical"
     android:paddingBottom="24dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.DetailActivity"
+    tools:context=".fragments.MovieDetailFragment"
     tools:layout_editor_absoluteX="16dp"
-    tools:layout_editor_absoluteY="400dp"
-    tools:showIn="@layout/activity_detail">
-
-    <include
-        android:id="@+id/llProgressBar"
-        android:visibility="gone"
-        layout="@layout/layout_progress_bar_with_text"/>
+    tools:layout_editor_absoluteY="400dp">
 
     <LinearLayout
         android:orientation="horizontal"
